# DeepResearch

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README_Zh.md
src/: run.py
src/agent/: agent.py  deepsearch.py  generate.py  learning.py  message.py  outline.py  prep.py  test_agent.py
src/config/: llms.toml  llms_config.py  search.toml  search_config.py  workflow.toml  workflow_config.py
src/data/: category.py
src/llms/: llm.py
src/mcp_client/: __init__.py  arxiv.py  paper_mcp_server.py  pubmed.py  test_mcp.py
src/prompts/: __init__.py  template.py
src/prompts/generate/: chart.py  generate.py
src/prompts/learning/: draft.py  evaluate_completeness.py  evaluate_freshness.py  evaluate_plurality.py  extract_knowledge.py  judge.py  research_query.py  search_query.py
src/prompts/outline/: outline.py  outline_sq.py
src/prompts/prep/: clarify.py  classify.py  rewrite.py
src/tools/: __init__.py  _jina.py  _jina_mcp.py  _search.py  _tavily.py  search.py
src/utils/: parse_model_res.py  print_util.py
