[tool.poetry]
name = "DeepResearch"
version = "1.0.0"
description = "Typist is a deep research framework based on the collaborative work of multiple LLMs. It integrates search tools to conduct deep research on topics and ultimately outputs visualized research reports."
authors = ["CzChu <czchu2@iflytek.com>"]
license = "https://github.com/iflytek/DeepResearch/blob/main/LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
annotated-types = "==0.7.0"
anyio = "==4.11.0"
attrs = "==25.4.0"
certifi = "==2025.10.5"
charset-normalizer = "==3.4.3"
click = "==8.3.0"
colorama = "==0.4.6"
exceptiongroup = "==1.3.0"
h11 = "==0.16.0"
httpcore = "==1.0.9"
httpx = "==0.28.1"
httpx-sse = "==0.4.3"
idna = "==3.11"
jsonschema = "==4.25.1"
jsonschema-specifications = "==2025.9.1"
mcp = "==1.17.0"
pydantic = "==2.12.0"
pydantic-core = "==2.41.1"
pydantic-settings = "==2.11.0"
python-dotenv = "==1.1.1"
python-multipart = "==0.0.20"
pywin32 = "==311"
referencing = "==0.36.2"
regex = "==2025.9.18"
requests = "==2.32.5"
rpds-py = "==0.27.1"
sniffio = "==1.3.1"
sse-starlette = "==3.0.2"
starlette = "==0.48.0"
tavily-python = "==0.7.12"
tiktoken = "==0.12.0"
toml = "==0.10.2"
typing-extensions = "==4.15.0"
typing-inspection = "==0.4.2"
urllib3 = "==2.5.0"
uvicorn = "==0.37.0"
langchain = "^0.3"
langchain-deepseek = "^0.1"
langgraph = "0.6.7"
json-repair = "^0.34"
beautifulsoup4 = "^4.12"
aiohttp = "^3.10"
lxml = "^5.2"
pytest = "^8.3"
mistune = "^3.1.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"